# peripheral-forensic

./: .gitignore  .gitleaks.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  index.html  mkdocs.yml  sitemap.xml
.github/scripts/: check_coverage.py
.github/workflows/: ci.yml  fuzz.yml
core/: Cargo.toml  README.md
core/src/: lib.rs  setupapi.rs
docs/: index.md  privacy.md  terms.md
forensic/: Cargo.toml  README.md
forensic/src/: lib.rs
forensic/tests/: real_data.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: forensic.rs  setupapi.rs
privacy/: index.html
search/: search_index.json
terms/: index.html
tests/data/: README.md
