[package]
name = "peripheral-core"
version = "0.1.0"
description = "External-device connection forensic reader: parses Windows setupapi.dev.log into typed DeviceConnection records with bus classification and authoritative-vs-inferred timestamp tagging"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/SecurityRonin/peripheral-forensic"
homepage = "https://github.com/SecurityRonin/peripheral-forensic"
documentation = "https://docs.rs/peripheral-core"
readme = "README.md"
keywords = ["forensics", "usb", "dfir", "incident-response", "peripheral"]
categories = ["parser-implementations", "command-line-utilities"]
exclude = ["/fuzz", "/.github", "/docs"]

[dependencies]

[lints]
workspace = true
